[package]
name = "part_1_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
flexi_logger = "0.27.3"
llvm-plugin = { version = "0.4.1", features = ["llvm15-0"] }
log = "0.4.20"
